# DigitalOracle

./: AUCTION_FIX_SUMMARY.md  AUCTION_LOADING_FIX.md  Idea2.txt  PRODUCTION_READINESS.md  QUICK_TEST_GUIDE.md  README.md  RENDER_DEPLOYMENT.md  RawIdea.txt  SIMPLER_DEPLOY.md  build-auctmah.sh  build.sh  go.mod  render.yaml
Auctmah/: README.md  go.mod  main.go
Auctmah/frontend/: Cargo.toml  index.html
Auctmah/frontend/src/: lib.rs
server/: go.mod  main.go
server/web/: admin.css  admin.html  admin.js  app.js  index.html  signal_bank.css  signal_bank.html  signal_bank.js  styles.css  vote.css  vote.html
signal-bank-landing/: ARCHITECTURE_DIAGRAM.md  FINAL_LINKAGE_REPORT.md  IMPLEMENTATION.md  LINKAGE_VERIFICATION.md  MASTER_CHECKLIST.md  QUICK_REFERENCE.md  README.md  REAL_DATA_FLOW.md  SOcial.txt  SYSTEM_LINKAGE_REPORT.md  TESTING_GUIDE.md  go.mod  index.html  main.go  script.js  styles.css  test-api.ps1
signal-bank-landing/data/: contributors.json  subscribers.json
