[package]
name = "auctmah-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "Window",
    "CanvasRenderingContext2d", "HtmlCanvasElement",
    "WebSocket", "MessageEvent", "console"
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.2", features = ["futures"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
